--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "query-string": "^6.13.1",
     "query-strings": "^0.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-emoji": "^0.5.0",
     "react-hook-form": "^6.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-scroll-to-bottom": "^3.0.0",
     "socket.io-client": "^2.3.0",
     "sweetalert2": "^9.17.0"
   },
