--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-scroll-to-bottom": "^3.0.0",
+    "react-spring": "^8.0.27",
     "socket.io-client": "^2.3.0",
     "sweetalert2": "^9.17.0"
   },
